# Django-Project

./: .gitignore  ARQUITECTURA.md  README.md  VERIFICACION_REQUERIMIENTOS.md  render.yaml
backend/: .env  CORREO_CONFIG.md  build.sh  db.sqlite3  requirements.txt
backend/api/: authentication.py  email_service.py  ia_service.py  serializers.py  tests.py  tests_services.py  urls.py  views.py
backend/config/: settings.py  urls.py
backend/core/: admin.py  tests.py
backend/core/adapters/: __init__.py  mappers.py  repositories.py
backend/core/migrations/: 0001_initial.py  0002_historialenvio.py
domain/: .coverage  README.md  pyproject.toml
domain/src/litethinking_domain/: __init__.py  apps.py
domain/src/litethinking_domain/entities/: __init__.py  empresa.py  historial_envio.py  inventario.py  producto.py
domain/src/litethinking_domain/exceptions/: __init__.py
domain/src/litethinking_domain/interfaces/: __init__.py  repositories.py  services.py
domain/src/litethinking_domain/migrations/: 0001_initial.py  __init__.py
domain/src/litethinking_domain/models/: __init__.py  empresa.py  historial_envio.py  inventario.py  producto.py
domain/src/litethinking_domain/validators/: __init__.py  empresa_validator.py  inventario_validator.py  producto_validator.py
domain/src/litethinking_domain/value_objects/: __init__.py  codigo_producto.py  email.py  hash_blockchain.py  money.py  nit.py
domain/tests/: __init__.py  test_entities.py  test_value_objects.py
frontend/: .env.production  SESION_ACTIVA.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
(+59 files in other folders)
